--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -62,7 +62,7 @@ image::visualizer-rename-view.png[]
 
 Sharing a defined view is automatic in the sense that when a new view is created and saved, it is visible in the view list of users who have access to the environment and apps in the view.
 
-You can also click *Copy Sharing URL* in the list next to *Save* and send it to the user you want to share the view with.
+You can also click *Copy Sharing URL* from the drop-down arrow next to *Save* and send it to the user with whom you want to share the view.
 
 
 image::visualizer-share-view.png[]
