--- a/modules/ROOT/pages/visualizer-app-network.adoc
+++ b/modules/ROOT/pages/visualizer-app-network.adoc
@@ -51,7 +51,7 @@ https://en.wikipedia.org/wiki/Metric_prefix[Here is a quick review of metric pre
 
 == View Information About a Node in Your Network
 
-When you select a node within the graph, the node and its dependency stack are highlighted and all unconnected nodes are grayed out. Anypoint Visualizer displays information about the node in a *Details/Monitoring* card. This card is divided into the following tabs:
+When you select a node within the graph, the node and its dependency stack are highlighted and all unconnected nodes are grayed out. Anypoint Visualizer displays information about the node in a card. This card is divided into the following tabs:
 
 The *Details* tab contains:
 * *Details*: Provides information about the node.
@@ -59,10 +59,10 @@ The *Details* tab contains:
 
 The *Monitoring* tab contains:
 * *Metrics summary*: Provides monitoring metrics for the selected node including Errors count, avg. response time, avg. throughput, avg. CPU consumption, and avg. memory utilization.
-* *Metrics chart*: Shows the time-series chart of the selected metric in the *Metric* drop-down.
+* *Metrics chart*: Shows the time-series chart of the selected metric in the *Metric* card.
 
 
-You can search for a node (service) in the *Filter services* text field. Services containing your search in any part of their name are highlighted, while others fade.
+You can search for a node (service) in the *Search services* text field. Services containing your search in any part of their name are highlighted, while others fade.
 
 == View Information About a Connection in Your Network
 
@@ -81,7 +81,7 @@ You can export the view of your network showing on your canvas to a PNG file.
 * If you customized your view with filters, the customized network topology is exported.
 * If you selected metrics or durations, these settings are reflected in the export.
 
-To export a PNG view of your network, click *Export as Image* next to the zoom to fit.
+To export a PNG view of your network, click the *Export as Image* button next to the zoom controls in the bottom right.
 
 == See Also
 
