--- a/modules/ROOT/pages/customize-your-canvas.adoc
+++ b/modules/ROOT/pages/customize-your-canvas.adoc
@@ -5,18 +5,18 @@ endif::[]
 
 
 You can choose what appears in your Visualizer canvas by applying filters for environments, tags, and services.
-This enables you to hide the nodes that you do not want to see see in the application graph.
+This enables you to hide the nodes that you do not want to see in the application graph.
 Filters have a cascading design, so all nodes that don't belong to the checked environments or tags are automatically hidden from the list of services.
 
-You can toggle *Show dependents and dependencies* to see  the services as well as dependencies of the nodes and services with the selected tags.
+You can toggle *Show dependents and dependencies* to see the services and dependencies of the nodes and services which have the selected tags.
 The *View* card and the canvas are updated to display the current selection.
 
-Visualizer editors can save defined views so any Visualizer user can access them.
-When you close Anypoint Visualizer and reload the canvas at a later time, the views you last accessed are displayed.
+Visualizer editors can save defined views so that any Visualizer user can access them.
+When you close Anypoint Visualizer and reload the canvas later, the views you last accessed are displayed.
 
 == Layers
 
-You can use one of the default layers provided by Anypoint Visualizer, or create a custom layer to create a visual representation of the apps in your network.
+You can use one of the default layers provided by Anypoint Visualizer, or add a custom layer to create a visual representation of the apps in your network.
 
 For more information, see xref:layers.adoc[Use Layers in Anypoint Visualizer].
 
