DOCS-5782-Visualized-quick-filtering

--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -10,6 +10,7 @@ Views display your saved filter selection, including:
 * Selected environments
 * Selected tags
 * Selected nodes in the list of services
+* Nodes that have been filtered
 * New services deployed that match the selected environments and tags
 * If the *Show dependents and dependencies* option is selected and the a service is deployed and related to a selected service
 
@@ -17,9 +18,14 @@ Views that you have access to appear in a list in the *View* card (click the dro
 
 == Defined Views
 
-As a Visualizer editor, you can create views that provide a consistent, high quality source of truth for the architecture of each of your organization's projects. Any Visualizer user who has permission for the included environments can see these auto-discoverable views in a drop-down list in the *View* card. Only editors can create, rename, and edit defined views.
+As a Visualizer editor, you can create views that provide a consistent, high quality source of truth for the architecture of each of your organization's projects.
+Any Visualizer user who has permission for the included environments can see these auto-discoverable views in a drop-down list in the *View* card.
+Only editors can create, rename, and edit defined views.
 
-These views provide team members with a topological view of the apps that are specific to the areas they are responsible for. Providing a dynamic view for team members ensures their ability to troubleshoot their projects more quickly and easily, and promotes architectural consistency.
+These views provide team members with a topological view of the apps that are specific to the areas they are responsible for.
+Providing a dynamic view for team members ensures their ability to troubleshoot their projects more quickly and easily, and promotes architectural consistency.
+
+In a defined view, you can also select nodes and hide related services or hide services other than the node that you selected.
 
 == Create a Defined View
 
