--- a/modules/ROOT/pages/visualizer-app-network.adoc
+++ b/modules/ROOT/pages/visualizer-app-network.adoc
@@ -6,7 +6,7 @@ endif::[]
 Use Anypoint Visualizer to view a graph of your application network.
 
 Anypoint Visualizer automatically generates the topology of the application.
-To maximize visualization readability, consumer nodes (nodes that only have outbound connections) are shown at the top. Backend systems (nodes that only have inbound connections) are shown at the bottom.
+To maximize visualization readability, consumer nodes (nodes that have only outbound connections) are shown at the top. Backend systems (nodes that have only inbound connections) are shown at the bottom.
 
 When the `ClientId` is detected for a consumer node, the nodes are grouped by `ClientId`; otherwise, it is grouped under the *External Traffic* node. For the `ClientId` to be detected, the target application/API/proxy should have the `ClientId` enforcement policy. For usability purposes, Client App names replace `ClientIds` in canvas. All Client Apps that call the same mule app are grouped into a single Client App group node. The number of Client Apps in the group are specified in the display name.
 
