--- a/modules/ROOT/pages/visualizer-app-network.adoc
+++ b/modules/ROOT/pages/visualizer-app-network.adoc
@@ -68,7 +68,11 @@ The *Monitoring* tab contains:
 
 When you select a node, you can click *Select dependents and dependencies*, which selects all nodes related to the service you selected.
 If a single node is selected and does not have any dependents or dependencies, this option is hidden.
-If you select multiple nodes, you can also click *Hide selected services* to hide the selected nodes, or you can click *Hide other services* to hide services that are unrelated to the selected nodes.
+You can hide nodes through what you select in the canvas.
+
+* To hide a single node, select it, and then click *Hide selected service*.
+* To hide multiple nodes, multiselect them, and then click *Hide selected services*.
+* To hide all of the services other than the selected nodes, you can click *Hide other services*. If you want to hide everything that is not related to a given dependency stack, select a node and then click *Select dependents and dependencies*, which selects all nodes related to the service which you selected. Then, click *Hide other services*.
 
 You can search for a node (service) in the *Search services* text field. Services containing your search in any part of their name are highlighted, while others fade.
 
