--- a/modules/ROOT/pages/technical.adoc
+++ b/modules/ROOT/pages/technical.adoc
@@ -32,7 +32,7 @@ To reduce any potential impact on performance for an application running in Clou
 . Set the application property `anypoint.platform.config.visualizer.agent.enabled=false`.
 . Redeploy the application.
 
-==== Disable Data Collection for Mule Version 4 Released on March 22, 2019 or Later, or Mule Version 3 Released on April 5, 2019 or Later
+==== Disable Data Collection for Mule Version 4 Released on March 22, 2019 or Later, Mule Version 3.9 Released on April 5, 2019 or Later, or Mule Version 3.8.7 Released on August 14, 2019 or Later
 
 To reduce any potential impact on performance for an application running in CloudHub, disable the Monitoring agent:
 
