Visualizer: initial IA for get started

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,6 +1,9 @@
 .xref:index.adoc[Anypoint Visualizer]
 * xref:index.adoc[Anypoint Visualizer]
 * xref:setup.adoc[Set up Anypoint Visualizer]
+** xref:cloudhub-setup.adooc[CloudHub Setup]
+** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
+** xref:standalone-mule-setup.adoc[Standalone Mule Setup]
 * xref:visualizer-app-network.adoc[Visualizer Application Network]
 * xref:customize-your-canvas.adoc[Customize the Canvas]
  ** xref:layers.adoc[Use Layers in Anypoint Visualizer]
