--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -4,10 +4,10 @@
  ** xref:cloudhub-setup.adoc[CloudHub Setup]
  ** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
  ** xref:standalone-mule-setup.adoc[Standalone Mule Setup]
+ ** xref:technical.adoc[Data Collection and Managing Performance]
 * xref:visualizer-app-network.adoc[Visualizer Application Network]
 * xref:customize-your-canvas.adoc[Customize the Canvas]
  ** xref:layers.adoc[Use Layers in Anypoint Visualizer]
  ** xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer]
  ** xref:view.adoc[Views]
-* xref:technical.adoc[How Anypoint Visualizer Collects Application Data]
 * xref:troubleshoot-visualizer.adoc[Troubleshoot Visualizer]
