--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -4,7 +4,7 @@
  ** xref:cloudhub-setup.adoc[CloudHub Setup]
  ** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
  ** xref:standalone-mule-setup.adoc[Standalone Mule Setup]
- ** xref:technical.adoc[Data Collection and Managing Performance]
+ ** xref:technical.adoc[Data Collection and Manage Performance]
 * xref:visualizer-app-network.adoc[Visualizer Application Network]
 * xref:customize-your-canvas.adoc[Customize the Canvas]
  ** xref:layers.adoc[Use Layers in Anypoint Visualizer]
