--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -2,9 +2,9 @@
 * xref:index.adoc[Anypoint Visualizer]
 * xref:setup.adoc[Set up Anypoint Visualizer]
  ** xref:cloudhub-setup.adoc[CloudHub Setup]
- ** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
  ** xref:standalone-mule-setup.adoc[Standalone Mule Setup]
- ** xref:technical.adoc[Data Collection and Manage Performance]
+ ** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
+ ** xref:technical.adoc[Manage Performance and Data Collection]
 * xref:visualizer-app-network.adoc[Visualizer Application Network]
 * xref:customize-your-canvas.adoc[Customize the Canvas]
  ** xref:layers.adoc[Use Layers in Anypoint Visualizer]
