--- a/modules/ROOT/pages/visualizer-app-network.adoc
+++ b/modules/ROOT/pages/visualizer-app-network.adoc
@@ -9,10 +9,10 @@ Anypoint Visualizer automatically generates the topology of the application.
 
 To maximize visualization readability, consumer nodes (nodes that have only outbound connections) are shown at the top. Backend systems (nodes that have only inbound connections) are shown at the bottom.
 
-When the `ClientId` is detected for a consumer node, the nodes are grouped by `ClientId`; otherwise, it is grouped under the *External Traffic* node. 
-The target `application/API/proxy` should have the `ClientId` enforcement policy to detect the `ClientId`. 
-For usability purposes, client app names replace `ClientIds` in the canvas. 
-All client apps that call the same Mule app are grouped into a single client app group node. 
+When the `ClientId` is detected for a consumer node, the nodes are grouped by `ClientId`; otherwise, it is grouped under the *External Traffic* node.
+The target `application/API/proxy` should have the `ClientId` enforcement policy to detect the `ClientId`.
+For usability purposes, client app names replace `ClientIds` in the canvas.
+All client apps that call the same Mule app are grouped into a single client app group node.
 The number of client apps in the group is specified in the display name.
 
 When viewing or modifying a graph, Anypoint Visualizer provides the following functionality:
@@ -34,17 +34,21 @@ Anypoint Visualizer displays only the environments you have permissions to view.
 
 After selecting the organization and environment group, Anypoint Visualizer displays a graph of your application network.
 
-== View Information About All Nodes In Your Network
+== View Information About All Services In Your Network
 
-Use the options in the *Metric* card to select the metric and the time window that you want to show for all the nodes in your application network.
+Use the options in the *Metric* card to select the metric that you want to show for all the nodes in your application network.
 In the *Metrics* section, you can select one of the following metrics:
 
 * *Inbound connections*
-* *Errors count*
-* *avg. response time*
-* *avg. throughput*
-* *avg. CPU consumption*
-* *avg. memory utilization*
+* *Avg response time*
+* *Avg throughput*
+* *Failures*
+* *Avg CPU utilization*
+* *Avg memory utilization*
+
+For Avg response time, Avg throughput, and Failures, you have the ability to select inbound or outbound metrics.
+If you select inbound, the value that appears on the application is the weighted average of that particular metric for all inbound connections to that node.
+If you select outbound, the value is the weighted average of that metric for all outbound connections.
 
 In the *Time Range* section, you can select the time window used to calculate the average values of the selected metric.
 
@@ -55,7 +59,7 @@ To avoid long numbers, Anypoint Visualizer uses unit prefixes to simplify your v
 |===
 https://en.wikipedia.org/wiki/Metric_prefix[Here is a quick review of metric prefixes], but note that, in Anypoint Visualizer, *u* represents micro, rather than *μ*.
 
-== View Information About a Node in Your Network
+== View Information About a Service in Your Network
 
 When you select a node within the graph, the node and its dependency stack are highlighted and all unconnected nodes are unavailable.
 Anypoint Visualizer displays information about the node in a card. This card is divided into the following tabs:
@@ -67,7 +71,7 @@ The *Details* tab contains:
 
 The *Monitoring* tab contains:
 
-* *Metrics summary*: Provides monitoring metrics for the selected node, including Errors count, avg. response time, avg. throughput, avg. CPU consumption, and avg. memory utilization.
+* *Metrics summary*: Provides monitoring metrics for the selected node, including Avg response time, Avg throughput, Failures, Avg CPU utilization, and Avg memory utilization. This shows either inbound or outbound values for Avg response time, Avg throughput, and Failures depending on what you’ve selected in the *Metric* card.
 * *Metrics chart*: Shows the time-series chart of the selected metric in the *Metric* card.
 
 When you select a node, you can click *Select dependents and dependencies*, which selects all nodes related to the service you selected.
